# cpp-qt-spaceship-game

./: .gitignore  CMakeLists.txt  README.md
_notes/: qt.md  settings.md  tutorial-notes.md
demo/events-demo/: myRect.cpp
demo/qtgraphics-demo/: Makefile
src/: main.cpp
tutorial/01-qtgraphics/: main.cpp  main.pro
tutorial/02-key-event/: Makefile  main.cpp  main.pro  myRect.h
tutorial/03-04-shoot/: Makefile  bullet.cpp  bullet.h  main.cpp  myRect.cpp
tutorial/03-shoot/: main.pro  moc_bullet.cpp  myRect.cpp
tutorial/05-enemy/: Makefile  enemy.cpp  enemy.h  main.cpp  main.pro  myRect.cpp  myRect.h
tutorial/06-health-score/: Makefile  bullet.cpp  enemy.cpp  game.cpp  game.h  main.cpp  main.pro  player.cpp  player.h  score.cpp  score.h
tutorial/07-sound-resource/: Makefile  bullet.cpp  enemy.cpp  game.cpp  health.h  main.pro  player.cpp  player.h  res.qrc
tutorial/08-graphics/: Makefile  bullet.cpp  enemy.cpp  enemy.h  game.cpp  health.cpp  player.cpp  player.h  res.qrc  score.cpp  score.h
